App title solve

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\leonm\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\alles_flutter\\flutter\\flutter
+sdk.dir=/Users/apple/Library/Android/sdk
+flutter.sdk=/Users/apple/Documents/Development/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
