--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,13 +1,14 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\alles_flutter\flutter\flutter
-FLUTTER_APPLICATION_PATH=C:\alles_flutter\essen
+FLUTTER_ROOT=/Users/apple/Documents/Development/flutter
+FLUTTER_APPLICATION_PATH=/Users/apple/Desktop/Flutter-AppProblem
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib\main.dart
+FLUTTER_TARGET=/Users/apple/Desktop/Flutter-AppProblem/lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
 EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
+DART_DEFINES=Zmx1dHRlci5pbnNwZWN0b3Iuc3RydWN0dXJlZEVycm9ycz10cnVl,RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
 DART_OBFUSCATION=false
-TRACK_WIDGET_CREATION=false
+TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=.packages
+PACKAGE_CONFIG=/Users/apple/Desktop/Flutter-AppProblem/.dart_tool/package_config.json
